@@ -1,3 +1,8 @@
+2008-01-29  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* MarshalStringsInPInvokeDeclarationsTest.cs: New. Unit tests
+	from Daniel Abramov.
+
 2008-01-21  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* UseManagedAlternativesToPInvokeTest.cs: New. Unit tests 
